<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lang">no</string>

    <string name="app_name">Alf\'s ByBuss Trondheim</string>
    <string name="custom_title">AtB busstider i Trondheim</string>
    <string name="search_button">Søk</string>
    <string name="search_field">(holdeplass) til (holdeplass)</string>
    <string name="search_field_hint">(holdeplass) til (holdeplass)</string>
    <string name="adress_button">Hent adresse</string>
    <string name="reverse_button">Reverser søk</string>

    <string name="menu_reverse_button">Reverser søk</string>
    <string name="menu_address_button">Bruk adressen din</string>
    <string name="menu_last_answer_button">Vis siste svar</string>
    <string name="menu_atb_schedules">AtB rutetider PDF\'er</string>
    <string name="menu_donate">Donèr</string>

    <string name="prefs_last_answer">LAST_ANSWER</string>
    <string name="prefs_last_search">LAST_SEARCH</string>
    <string name="menu_about">About / Hvordan bruke</string>
    <string name="internet_warning_message">Mangler kontakt med internet, aktiver enten EDGE/3G/4G etc eller WiFi</string>
    <string name="no_location_on_geolocate">Ingen lokasjon funnet, skru på GPS/WiFi?</string>
    <string name="dialog_orakel_title">Svaret fra bussorakelet</string>
    <string name="dialog_orakel_message_noanswer">Ikke hentet noe svar enda</string>
    <string name="dialog_orakel_okbutton">Ferdig</string>
    <string name="dialog_orakel_refreshbutton">Oppdater</string>
    <string name="toast_wait_for_oracle">Venter på svar fra bussorakelet</string>
    <string name="toast_empty_question">Søkefeltet er tomt -_-</string>
    <string name="toast_need_two_stops">Trenger 2 holdeplasser og ordet \'til\' imellom de</string>
    <string name="toast_dummy_text_question">Du må skrive inn noen holdeplasser, nå er det bare dummytekst i feltet</string>

    <string name="widget_dummy_text">Her vil ditt siste søk dukke opp\n\n\n\n\n\n\nEND?</string>

    <string name="search_separator">&#160;til&#160;</string>
    <string name="search_separator_nostart">til&#160;</string>
    <string name="search_separator_nospace">til</string>

    <string name="toast_turn_on_gps_wifi">Skru på Wifi/gps-posisjonering i settings</string>
    <string name="toast_loading_stops">Loader bussholdeplasser</string>
    <string name="dialog_edit_autocomplete">Redigér</string>
    <string name="dialog_edit_autocomplete_del">Slett</string>
    <string name="orakel_no_contact">Søk kunne ikke gjennomføres. Sjekk om du er tilkoblet nettet (edge/3G/WiFi etc.)</string>

    <string name="ukjent_busstop_name">Vet ikke navnet på bussholdeplassen, bruk heller Geolocate og hent ut adressen der du er eller skriv inn manuelt</string>
    <string name="reise_fra">Reise fra&#160;</string>
    <string name="reise_til">Reise til&#160;</string>
    <string name="ja">ja</string>
    <string name="nei">nei</string>

    <string name="loading_title">Loading...</string>
    <string name="loading_text">Finner din adresse...</string>

    <string name="realtime_button">realtime</string>
    <string name="realtime_NOW">NÅ! (&#60;1min)</string>
    <string name="realtime_snu_retning">Andre veien</string>
    <string name="realtime_snu_retning_fail_title">Sorry</string>
    <string name="realtime_snu_retning_fail_message">Fant ikke den andre holdeplassen</string>
    <string name="realtime_ingen_info">Ingen realtime info å oppdrive :(</string>
    <string name="realtime_mot_sentrum">mot sentrum</string>
    <string name="realtime_fra_sentrum">fra sentrum</string>
    <string name="realtime_linje">Linje&#160;</string>
    <string name="realtime_mot">&#160;mot&#160;</string>
    <string name="realtime_loading">Realtime info loades...</string>
    <string name="realtime_hour">time(r)</string>

    <string name="edit">Editer</string>
    <string name="slett">Slett</string>

    <string name="orakel_specify_answer">Jeg kan ikke finne flere ruteforbindelser på</string>
    <string name="orakel_specify_solution">Jeg kan ikke finne flere ruteforbindelser på den ruten idag</string>

    <integer name="versionCode">30</integer>
    <string name="version">1.3.2</string>
    <string name="about_string">Version 1.3.2\nUtviklet av: Alf Simen Sørensen\nFor info om oppetid etc:\nTwitter: @AlfSimen\nFacebook: www.fb.com/AlfsByBussTrondheim\n\nBugreports, ønsker til funksjonalitet eller annet kan sendes til simen.sorensen@gmail.com\n\nAppen kan brukes på flere forskjellige måter:\n\n
                                1: Man kan enten skrive inn en søkestreng i søkefeltet med \"*fra-holdeplass* til *til-holdeplass*\" eller med full søkestreng som f.eks.
                                \"Når går bussen fra Sentrum til Buran for å være der innen kl 2000?\"\n\n
                                2: Trykke på en holdeplass i kartet for å velge *fra-holdeplass* og så trykke i kartet og velge *til-holdeplass*\n\n
                                3: Hente ut adressen ved å trykke "menu" så "Bruk adressen din" og så enten skrive inn til-holdeplass, eller velge den i mappet.\n\n
                                Denne dialogen kan hentes frem igjen ved å trykke menu og velge \"About / Hvordan bruke\"</string>
    <string name="help_string">Appen kan brukes på 2 forskjellige måter:\n\n
                                1: Man kan enten skrive inn en søkestreng i søkefeltet med \"*fra-holdeplass* til *til-holdeplass*\" eller med full søkestreng som f.eks.
                                \"Når går bussen fra Sentrum til Buran for å være der innen kl 2000?\"\n\n
                                2: Trykke på en holdeplass i kartet for å velge *fra-holdeplass* og så trykke i kartet og velge *til-holdeplass*\n\n
                                3: Hente ut adressen ved å trykke "menu" så "Bruk adressen din" og så enten skrive inn til-holdeplass, eller velge den i mappet.\n\n
                                Denne dialogen kan hentes frem igjen ved å trykke menu og velge \"About / Hvordan bruke\"</string>

    <string name="APIdebugKey">0ZYAlXTuMtoZWkn5XmlJbIv9Zhf73V8ZzYrNbOQ</string>
    <string name="APIKey">0ZYAlXTuMtoZzdvRl3xfQtkGitllvEREplkqpOg</string>
    <string name="realtimeAPIkey">7w2gLysyfz2uKf5w</string>

    <string name="AtBSchedulesURL">http://m.atb.no/rutetabeller/category421.html</string>
</resources>
