<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_AtB_schedules"
          android:icon="@drawable/menu_atb"
          android:title="@string/menu_atb_schedules"/>
    <item android:id="@+id/menu_get_address"
          android:icon="@drawable/menu_use_address"
          android:title="@string/menu_address_button"/>
    <item android:id="@+id/menu_reverse_search"
          android:icon="@drawable/menu_reverse_icon"
          android:title="@string/menu_reverse_button"/>
    <item android:id="@+id/menu_last_search"
          android:icon="@drawable/menu_last_search"
          android:title="@string/menu_last_answer_button"/>
    <item android:id="@+id/menu_about"
          android:icon="@drawable/menu_about"
          android:title="@string/menu_about"/>
</menu>