<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
        <com.google.android.maps.MapView
            android:id="@+id/MapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:enabled="true"
            android:clickable="true"
            android:apiKey="@string/APIKey"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TableLayout android:id="@+id/top_table"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:stretchColumns="0"
                     android:layout_centerVertical="true"
                     android:paddingTop="5px"
                     android:background="@drawable/gradient_header"
                     >
                <TableRow>
                    <AutoCompleteTextView
                          android:id="@+id/search_entry_autocomplete"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:gravity="left"
                          android:singleLine="true"
                          android:textSize="8pt"
                          android:layout_marginLeft="4px"
                          android:hint="@string/search_field_hint"
                          android:layout_centerVertical="true"
                      />
                    <Button android:id="@+id/search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_button"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_shape"
                        android:paddingLeft="8px"
                        android:paddingRight="8px"
                        />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

